tests/parser-test-files/parse-match.txt
================================================================================
Malformed match expression
================================================================================

(package test-package)

(define f (match))

--------------------------------------------------------------------------------

error: Malformed match expression
  --> test:3:17
   |
 3 |  (define f (match))
   |                  ^ expected expression

================================================================================
Malformed match branch
================================================================================

(package test-package)

(define f
  (match x
    (y)))

--------------------------------------------------------------------------------

error: Malformed match branch
  --> test:5:7
   |
 5 |      (y)))
   |        ^ expected body

================================================================================
Malformed match branch
================================================================================

(package test-package)

(define f
  (match x
    5))

--------------------------------------------------------------------------------

error: Malformed match branch
  --> test:5:4
   |
 5 |      5))
   |      ^ expected list

================================================================================
Malformed match branch
================================================================================

(package test-package)

(define f
  (match x
    (x y . z)))

--------------------------------------------------------------------------------

error: Malformed match branch
  --> test:5:4
   |
 5 |      (x y . z)))
   |      ^^^^^^^^^ unexpected dotted list
